@@ -152,6 +152,11 @@ New Class Diagrams
 static methods in .NET invoked without !
 Few tests added for .NET method invocation
 
+2010-10-24
+IObjectDecorator
+TransactionManager
+TransactionalObject WIP
+
 Angel "Java" Lopez
 http://www.ajlopez.com/en
 http://ajlopez.wordpress.com/
